[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
validate-email = "^1.3"
motor = "^3.3.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
python-multipart = "^0.0.6"
pydantic-settings = "^2.1.0"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"

[tool.ruff]
line-length = 79
show-fixes = true
src = ['src']
select = [
    'E',
    'F',
    'UP',
    'D'
]